Ebizapp/Backend-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ebizapp-api
  namespace: client02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-ebizapp
  template:
    metadata:
      labels:
        app: backend-ebizapp
    spec:
      containers:
      - name: backend-ebizapp
        image: sushantjadhav/ebizapi:latest
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: 100Mi
            cpu: 250m
        volumeMounts:
             - name: postgres-pv-volume-mount
               mountPath: /var/lib/postgresql/data
             
      volumes:
        - name: postgres-pv-volume-mount
          persistentVolumeClaim:
            claimName: postgresdb-pv-claim
      restartPolicy: Always
