Ebizapp/Ebizapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ebizapp
  namespace: client02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ebizapp
  template:
    metadata:
      labels:
        app: frontend-ebizapp
    spec:
      containers:
      - name: frontend-ebizapp
        image: sushantjadhav/ebizapp:v1
        resources:
          limits:
            memory: 3Gi
            cpu: 100m
        ports:
          - containerPort: 3000
