Ebizapp/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: client02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-container
  template:
    metadata:
      labels:
        app: postgres-container
    spec:
      containers:
        - name: postgres-container
          image: postgres:latest  
          ports:
            - containerPort: 5432
          resources:
           limits:
            memory: 100Mi
            cpu: 10m
          volumeMounts:
             - name: postgres-pv-mount
               mountPath: /var/lib/postgresql/data
             
      volumes:
        - name: postgres-pv-mount
          persistentVolumeClaim:
            claimName: postgresdb-pv-claim
      restartPolicy: Always
