Ebizapp/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
  namespace: client02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-db
  template:
    metadata:
      labels:
        app: session-db
    spec:
      containers:
      - name: redis-container
        image: redis:latest
        resources:
          limits:
            memory: 100Mi
            cpu: 10m
        ports:
        - containerPort: 6379
