Ebizapp/Ebizapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: client02
  labels: 
     app: frontend-ebizapp
spec:
    type: NodePort
    selector:
      app: frontend-ebizapp
    ports:
     - port: 3000
       targetPort: 80
       nodePort: 30002
