Ebizapp/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace:  client02
spec: 
  selector:
    app: postgres-container
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5432
